<resources>
    <string name="app_name">YBFace</string>
    <string name="app_name2">HTFace</string>
    <string name="app_name3">思库考勤</string>
    <string name="used">used:</string>
    <string name="no_used">/can use:</string>
    <string name="back">Back</string>
    <string name="not_support_speech">Languages not supported by the current speech engine:</string>
    <string name="miss_speech_data">Voice data missing:</string>
    <string name="alert_title_warning">Warning</string>
    <string name="temper_error_tips">The temperature measurement data failed to be retrieved, please check the temperature measurement module</string>
    <string name="temper_error_btn_restart">Reboot</string>
    <string name="temper_error_btn_cancel">No processing</string>
    <string name="setting_restore_title">Factory data reset</string>
    <string name="setting_restore_tips">This action will clear all data about the application, including:\n· Personnel information base\n· Record data\n· Setting data\n· Custom images\nDo you want to continue?</string>
    <string name="space_insufficient_save_and_delete">There is not enough storage and the earliest record is deleted every time a record is written</string>
    <string name="clean_storage_must">The device ran out of memory, please clear the data.</string>
    <string name="clean_storage_please">The device ran out of memory, please clear the data, Are you sure you want to enter?</string>
    <string name="alvailable_space">Available space: %1$s%2$s</string>
    <string name="main_tip_stranger">stranger</string>
    <string name="import_please_select_excel">Please select Excel file(*.xls,*.xlsx)</string>
    <string name="import_title">Import</string>
    <string name="import_select_file">Select the file</string>
    <string name="import_select_all">All</string>
    <string name="import_select_reverse">Reverse</string>
    <string name="import_start">Start</string>
    <string name="import_submit_success">submitted successfully</string>
    <string name="import_submit_failed">submit failure</string>
    <string name="import_import_complete">Import complete</string>
    <string name="import_sync_failed">Synchronization failure</string>
    <string name="import_add_success">successfully added:</string>
    <string name="import_add_failed">add failed:</string>
    <string name="import_add_exists">already exist:</string>
    <string name="import_add_skip">skip:</string>
    <string name="user_number_is_exists">The User Id already exists</string>
    <string name="there_is_no_net">"There is no server connection"</string>
    <string name="upload_there_is_no_server_connect">There is no server connection. Data are saved automatically locally only</string>
    <string name="please_add_a_user">Please add at least one user</string>
    <string name="clear_all_data_dialog_title">Warning</string>
    <string name="clear_all_data_dialog_message">Are you sure you want to clear all data?</string>
    <string name="setting_service_ip_address">Service Address</string>
    <string name="local_directory">Internal Storage</string>
    <string name="usb_directory">USB Storage</string>
    <string name="no_can_used_directory">Directory unavailable, please check permissions</string>
    <string name="confirm_directore_tips">Are you sure to use this directory？</string>
    <string name="select_directory_title">Select the directory</string>
    <string name="click_select_this_directory">Click to select this directory</string>
    <string name="delete_record_msg">Are you sure you want to delete the record?</string>
    <string name="create_dir_title">create directory</string>
    <string name="please_input_dir_name">Please enter the directory name</string>
    <string name="create_success">Directory created successfully</string>
    <string name="create_failed">Failed to create directory</string>
    <string name="tip_add_depart_success">Department is added successfully</string>
    <string name="broadcast_delay_prompt">Only valid in "temperature only" mode</string>
    <string name="tip_delay_title">Voice prompt interval</string>
    <string name="tip_delete_depart_success">Department is deleted successfully</string>
    <string name="delete_user_dialog_title">Confirm delete</string>
    <string name="edit_user_dialog_title">Confirm modify</string>
    <string name="delete_user_dialog_message">Are you sure you want to delete this user?</string>
    <string name="restart_dialog_title">Confirm restart</string>
    <string name="open_door_delay_saved_tips">Changes are saved</string>
    <string name="no_mask_tip">Si prega di indossare la maschera</string>
    <string name="error_mask_tip">Si prega di indossare la maschera correttamente</string>
    <string name="please_aim_face_frame">Si prega di guardare nella telecamera</string>
    <string name="setting_tab_face">Face</string>
    <string name="setting_tab_page">Display</string>
    <string name="setting_tab_temper">Temperature</string>
    <string name="setting_tab_device">Device</string>
    <string name="speech_setting_title">Voice Settings</string>
    <string name="setting_welcome_speech">Welcome message</string>
    <string name="temper_tips_close">Position Prompt</string>
    <string name="speech_setting_open_or_close">On</string>
    <string name="speech_setting_show_temper">Announce Temperature</string>
    <string name="speech_setting_temper_location">Announce Temp. in Broadcast</string>
    <string name="speech_setting_location_start">Before</string>
    <string name="speech_setting_location_center">Custom position</string>
    <string name="speech_setting_location_end">After</string>
    <string name="speech_setting_alert">Put the # symbol in the text where you want to display and pronounce temperature value. Please do not forget to choose Custom position in this case.</string>
    <string name="speech_setting_welcome_exmaple">Example of welcome：</string>
    <string name="speech_setting_distance_exmaple">Position Prompt example：</string>
    <string name="speech_setting_normal_exmaple">Example of normal temperature：</string>
    <string name="speech_setting_warning_exmaple">Examples of abnormal temperature：</string>
    <string name="speech_setting_audition">play</string>
    <string name="setting_normal_speech_content">Normal temperature broadcast:</string>
    <string name="setting_warning_speech_content">Abnormal temperature broadcast</string>
    <string name="setting_broadcast_speed">Voice speed</string>
    <string name="setting_default_welcome_tip">Welcome to AI intelligent attendance system</string>
    <string name="setting_camera_vertical_mirror">Frame vertical mirror</string>
    <string name="setting_picture_rotation">With the camera</string>
    <string name="setting_local_priority">Use added logo</string>
    <string name="setting_pic_rotation">Direction of photos</string>
    <string name="setting_privacy_mode">Privacy Mode</string>
    <string name="setting_no_data_mode">No data mode</string>
    <string name="setting_no_data_mode_tips">When turned on, no data is saved</string>
    <string name="setting_periodic_purge_policy">Automatically delete data after</string>
    <string name="setting_clear_policy_tip">Automatically clear data %1$s days ago</string>
    <string name="setting_show_main_logo">Display LOGO</string>
    <string name="setting_show_main_thermal">Display Thermal Imaging</string>
    <string name="setting_show_main_info">Display the panel on the home screen</string>
    <string name="temper_tips_centigrade">Centigrade</string>
    <string name="temper_tips_fahrenheit">Fahrenheit degree</string>
    <string name="app_main_title">Display/Title</string>
    <string name="select_img_title">Select Image</string>
    <string name="select_img_failed">Image selection failed</string>
    <string name="select_img_failed_not_exists">The selected image does not exist</string>
    <string name="setting_app_logo">LOGO</string>
    <string name="setting_select_image">Update</string>
    <string name="setting_restore_image">Default</string>
    <string name="setting_high_temp_model">High temperature mode</string>
    <string name="yb_check_in">YBFace</string>
    <string name="yb_temper_check_in">YBFace</string>
    <string name="yb_certificates">YBCertificates</string>
    <string name="yb_multiple">YBHighThroughput</string>
    <string name="yb_safety_chceck">YBTemperatureSecurityCheck</string>
    <string name="ht_temper_check_in">HTTemperatureCheckIn</string>
    <string name="ht_certificates">HTCertificates</string>
    <string name="ht_multiple">HTHighThroughput</string>
    <string name="ht_safety_chceck">HTTemperatureSecurityCheck</string>
    <string name="sk_temper_check_in">SKTemperatureCheckIn</string>
    <string name="sk_multiple">SKHighThroughput</string>
    <string name="smt_main_net_normal">online</string>
    <string name="smt_main_net_normal2">online</string>
    <string name="smt_main_net_no">offline</string>
    <string name="smt_main_all">All</string>
    <string name="smt_main_already">Arr</string>
    <string name="smt_main_ver">Ver:</string>
    <string name="smt_main_company">Company:</string>
    <string name="smt_main_device_no">No.</string>
    <string name="smt_main_not_bind">Unbound</string>
    <string name="main_temp_warning_tips">Abnormal Temperature</string>
    <string name="main_temp_normal_tips">Normal Temperature</string>
    <string name="main_temp_error_tips">Abnormal Temperature</string>
    <string name="main_temp_tips_please_close">Please come closer</string>
    <string name="main_temp_tips_so_far_text">It’s too far. Please come closer</string>
    <string name="main_temp_tips_please_far">Please Step Back</string>
    <string name="main_temp_tips_so_close_text">It’s too Close. Please step back</string>
    <string name="main_thermal_has_person">Thermal imaging:Someone</string>
    <string name="main_thermal_no_person">Thermal imaging:No one</string>
    <string name="recommend_valuez_setting">80%</string>
    <string name="employ_list_title">Users</string>
    <string name="employ_list_depart_sync">Sync</string>
    <string name="employ_List_add_user">Add user</string>
    <string name="employ_List_query_button">Search</string>
    <string name="employ_list_download_failed">Failed to dowload image</string>
    <string name="employ_list_add_face_failed">Image is not valid</string>
    <string name="employ_list_update_head_failed">Failed to update image</string>
    <string name="employ_list_field_index">No</string>
    <string name="employ_list_field_number">ID</string>
    <string name="employ_list_field_name">Name</string>
    <string name="employ_list_field_depart">Department</string>
    <string name="employ_list_field_position">Title</string>
    <string name="employ_list_field_control">Operation</string>
    <string name="employ_list_please_input_user_name">username</string>
    <string name="employ_list_depart">Departments</string>
    <string name="employ_list_add_depart">Add Department</string>
    <string name="setting_face_similar_threshold">Face similarity threshold</string>
    <string name="setting_enable_dialog">show face infomaction</string>
    <string name="setting_enable_liveness">Turn on live detection</string>
    <string name="setting_camera_mirror">Frame horizontal mirror</string>
    <string name="setting_open">On</string>
    <string name="setting_camera_angle">Camera Angle</string>
    <string name="setting_system_password">Password required</string>
    <string name="setting_please_input_password">Please enter 6-12 digit password (number, letter)</string>
    <string name="setting_please_input_again">Please enter the password again</string>
    <string name="setting_save_service_info">save</string>
    <string name="setting_total_one">total of 1</string>
    <string name="base_ensure">Confirm</string>
    <string name="base_cancel">Cancel</string>
</resources>