<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    style="@style/setting_text_child"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_face_similar_threshold" />

            <EditText
                android:id="@+id/edt_similar_threshold"
                style="@style/style_setting_input_number_edt" />

            <Button
                android:id="@+id/btn_set_similar_threshold"
                style="@style/style_setting_input_save_button"
                android:text="@string/setting_save_service_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:text="@string/recommend_valuez_setting"
                android:textColor="#ff0000"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_enable_liveness" />

            <Switch
                android:id="@+id/sw_liveness_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_camera_mirror" />

            <CheckBox
                android:id="@+id/cb_mirror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:text="@string/setting_open"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_marginLeft="20dp"
                style="@style/setting_text"
                android:text="@string/setting_camera_vertical_mirror" />

            <CheckBox
                android:id="@+id/cb_vertical_mirror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:text="@string/setting_open"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_enable_dialog" />

            <Switch
                android:id="@+id/sw_face_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_camera_angle" />

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_total_one"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_setAngle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/cb_mirror"
                android:background="@drawable/shape_system_name"
                android:onClick="setAngle"
                android:textColor="#59B4CA" />

            <TextView
                android:layout_marginLeft="20dp"
                android:id="@+id/tv_camera"
                style="@style/setting_text"
                android:text="@string/setting_pic_rotation"/>

            <Button
                android:id="@+id/btn_picture_rotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/cb_mirror"
                android:background="@drawable/shape_system_name"
                android:onClick="setPicRotation"
                android:textColor="#59B4CA" />

            <Spinner
                android:id="@+id/spn_camera_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/shape_system_name"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
